--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.11",
+    "multer": "^1.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "socket.io": "^4.3.2"
   },
   "name": "freezeme",
   "type": "module",
